Reflect the findings.